tekton/os/cp4i/minikube/minikube-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db01-ingress
  namespace: ace-operator
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /tea/index
            backend:
              service:
                name: tea-tekton-service
                port:
                  number: 8300
