tekton/os/cp4i/minikube/minikube-tea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tea-ingress
  namespace: cp4i
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /tea/index
            backend:
              service:
                name: tea-tekton-cp4i-ir
                port:
                  number: 7800
